# openwebui-credit-system

./: .gitignore  Akceptační_Protokol.docx  CREDIT_RESET_IMPLEMENTATION.md  HTTPS_SETUP.md  README.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SETUP_COMPLETE.sh  licence.txt  run_credit_admin.sh  run_openwebui.sh  set-api-key.sh  validate-security-fixes.sh
credit_admin/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose-https.yml  docker-compose.yml  generate-env.sh  init_system.py  nginx.conf  nginx_site_template.conf  pyproject.toml  requirements.txt  setup-ssl-production.sh  setup-ssl.sh  show-security-config.sh  test-security.sh
credit_admin/app/: auth.py  config.py  database.py  main.py
credit_admin/app/api/: auth.py  credit_logic.py  credits.py  credits_v2.py  waiting_list.py
credit_admin/app/data/: credit_reset_scheduler.py  credits_groups.json  monthly_credit_reset.py  monthly_credit_reset_db.py  sync_credits.py  watch_db.py
credit_admin/app/static/: index.html  main.js  pricing.html  waiting_list.html
credit_admin/scripts/: list_models.py
extensions/: context_limiter_filter.py  credit_charging_filter.py  credit_management_enough_credits.py  credit_management_models.py  gemini_function.py
functions/: function-credit_management_charging_credits-export-1747362819654.json  function-credit_management_enough_credits-export-1747362817459.json  function-credit_management_models-export-1747362814961.json  functions-export-1758191810928.json
